Добавлено: Парсинг if Парсинг for, while, do-while (правильность не проверялась сильно)

--- a/Compiler/CompilerConsole.csproj
+++ b/Compiler/CompilerConsole.csproj
@@ -55,15 +55,18 @@
     <Compile Include="Parser\Exceptions\UndefinedTokenException.cs" />
     <Compile Include="Parser\Exceptions\UndefinedTypeException.cs" />
     <Compile Include="Parser\Exceptions\UsedKeyWorldExceptioncs.cs" />
-    <Compile Include="Parser\Nodes\ArrCall.cs" />
+    <Compile Include="Parser\Nodes\BodyNodes\DoLoop.cs" />
+    <Compile Include="Parser\Nodes\BodyNodes\ForLoop.cs" />
+    <Compile Include="Parser\Nodes\BodyNodes\WhileLoop.cs" />
+    <Compile Include="Parser\Nodes\CallNode\ArrCall.cs" />
     <Compile Include="Parser\Nodes\ArrNode.cs" />
-    <Compile Include="Parser\Nodes\BodyNode.cs" />
+    <Compile Include="Parser\Nodes\BodyNodes\BodyNode.cs" />
     <Compile Include="Parser\Nodes\Expressions.cs" />
-    <Compile Include="Parser\Nodes\IfNode.cs" />
+    <Compile Include="Parser\Nodes\BodyNodes\IfNode.cs" />
     <Compile Include="Parser\Nodes\Literals.cs" />
-    <Compile Include="Parser\Nodes\MethodNode.cs" />
+    <Compile Include="Parser\Nodes\BodyNodes\MethodNode.cs" />
     <Compile Include="Parser\Nodes\Node.cs" />
-    <Compile Include="Parser\Nodes\MethCall.cs" />
+    <Compile Include="Parser\Nodes\CallNode\MethCall.cs" />
     <Compile Include="Parser\Nodes\VariableNode.cs" />
     <Compile Include="Parser\Parser.cs" />
     <Compile Include="Parser\ParserMethods.cs" />
