--- a/Compiler/CompilerConsole.csproj
+++ b/Compiler/CompilerConsole.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="CILGenerator\Generator.cs" />
     <Compile Include="CILGenerator\GeneratorMethods.cs" />
+    <Compile Include="CILGenerator\Utils.cs" />
     <Compile Include="Parser\Body.cs" />
     <Compile Include="Parser\Exceptions\BadExpressionExceptions.cs" />
     <Compile Include="Parser\Exceptions\NodeAlreadyDeclaredException.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Parser\Nodes\CallNode\ArrCall.cs" />
     <Compile Include="Parser\Nodes\ArrNode.cs" />
     <Compile Include="Parser\Nodes\BodyNodes\BodyNode.cs" />
+    <Compile Include="Parser\Nodes\CallNode\CallVariable.cs" />
     <Compile Include="Parser\Nodes\Expressions.cs" />
     <Compile Include="Parser\Nodes\BodyNodes\IfNode.cs" />
     <Compile Include="Parser\Nodes\Literals.cs" />
@@ -76,6 +78,7 @@
     <Compile Include="Parser\ParserMethods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\TestCode.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Input.txt" />
