--- a/Compiler/CompilerConsole.csproj
+++ b/Compiler/CompilerConsole.csproj
@@ -88,6 +88,7 @@
     <Content Include="Templates\LocalvariableDeclaration.txt" />
     <Content Include="Templates\StartFucDecl.txt" />
     <Content Include="Templates\StartProgramTempate.txt" />
+    <Content Include="Templates\WriteLineTemplate.txt" />
     <Content Include="Tests\Test1.c" />
     <Content Include="Tests\Test2.c" />
     <Content Include="Tests\Test3.c" />
