--- a/Compiler/CompilerConsole.csproj
+++ b/Compiler/CompilerConsole.csproj
@@ -86,6 +86,7 @@
     <Content Include="Templates\DeclFuncFinish.txt" />
     <Content Include="Templates\DeclMainFuncStart.txt" />
     <Content Include="Templates\LocalvariableDeclaration.txt" />
+    <Content Include="Templates\ReadLineTemplate.txt" />
     <Content Include="Templates\StartFucDecl.txt" />
     <Content Include="Templates\StartProgramTempate.txt" />
     <Content Include="Templates\WriteLineTemplate.txt" />
