--- a/Compiler/CompilerConsole.csproj
+++ b/Compiler/CompilerConsole.csproj
@@ -78,10 +78,10 @@
     <Compile Include="Parser\ParserMethods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests\TestCode.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Input.txt" />
+    <Content Include="Templates\ArrDecl.txt" />
     <Content Include="Templates\CallField.txt" />
     <Content Include="Templates\CallMethod.txt" />
     <Content Include="Templates\ClassDeclTemplate.txt" />
