Добавлено: ОХРЕНЕТЬ СКОЛЬКО МНОГО КОДА Я не помню что добавил - с утра пишу. Лох(

--- a/Compiler/CompilerConsole.csproj
+++ b/Compiler/CompilerConsole.csproj
@@ -84,8 +84,10 @@
     <Content Include="Templates\CallField.txt" />
     <Content Include="Templates\CallMethod.txt" />
     <Content Include="Templates\ClassDeclTemplate.txt" />
+    <Content Include="Templates\ConjTemplate.txt" />
     <Content Include="Templates\DeclFuncFinish.txt" />
     <Content Include="Templates\DeclMainFuncStart.txt" />
+    <Content Include="Templates\DijTemplate.txt" />
     <Content Include="Templates\FieldDeclTemplate.txt" />
     <Content Include="Templates\LocalvariableDeclaration.txt" />
     <Content Include="Templates\ReadLineTemplate.txt" />
