--- a/Compiler/CompilerConsole.csproj
+++ b/Compiler/CompilerConsole.csproj
@@ -84,17 +84,23 @@
     <Content Include="Templates\CallField.txt" />
     <Content Include="Templates\CallMethod.txt" />
     <Content Include="Templates\ClassDeclTemplate.txt" />
+    <Content Include="Templates\ConcateTemplate.txt" />
     <Content Include="Templates\ConjTemplate.txt" />
+    <Content Include="Templates\ConvertTemplate.txt" />
     <Content Include="Templates\DeclFuncFinish.txt" />
     <Content Include="Templates\DeclMainFuncStart.txt" />
     <Content Include="Templates\DijTemplate.txt" />
+    <Content Include="Templates\DoWhileTemplate.txt" />
     <Content Include="Templates\FieldDeclTemplate.txt" />
     <Content Include="Templates\LocalvariableDeclaration.txt" />
     <Content Include="Templates\ReadFileTemplate.txt" />
     <Content Include="Templates\ReadLineTemplate.txt" />
     <Content Include="Templates\StartFucDecl.txt" />
     <Content Include="Templates\StartProgramTempate.txt" />
+    <Content Include="Templates\WhileTemplate.txt" />
+    <Content Include="Templates\WriteFileTemplate.txt" />
     <Content Include="Templates\WriteLineTemplate.txt" />
+    <Content Include="Templates\WriteTemplate.txt" />
     <Content Include="Tests\Test1.c" />
     <Content Include="Tests\Test2.c" />
     <Content Include="Tests\Test3.c" />
